--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -91,27 +91,24 @@ header div {
 
 @media only screen and (max-width: 650px){
     header .logo {
-        width: 2.5rem;
-        height: 2.5rem;
-        padding: 1rem;
-        border-radius: 1rem;
-        margin-right: 0.75rem;
+        width: 2.25rem;
+        height: 2.25rem;
+        padding: 0.75rem;
+        border-radius: 0.75rem;
+        margin-right: 0.5rem;
+        box-shadow: 0 0 3px white, 0 0 7px white, 0 0 10px gold;
     }
 
     header h1 {
-        font-size: 0.75rem;
+        font-size: 0.7rem;
         margin-right: 0.25rem;
+        flex-grow: 1;
     }
 
     header div {
-        font-size: 0.5rem;
-        border-radius: 0.75rem;
-        margin-right: 0.25rem;
-        font-weight: 700;
-        padding: 0;
+     display: none;
     
     }
-
     .social {
         height: 1rem;
         width: 1rem;
