--- a/resources/css/body.css
+++ b/resources/css/body.css
@@ -546,7 +546,6 @@
         text-align: left;
         font-weight: 700;
     }
-
     .mint {
         padding: 0.25rem;
         border-radius: 0.5rem;
@@ -554,6 +553,7 @@
     }
     .partners {
         width: 85%;
+        height: 100%;
     }
     .partners h1 {
         font-size: 1rem;
