--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -97,7 +97,7 @@ header div {
         padding: 0.75rem;
         border-radius: 0.75rem;
         margin-right: 0.5rem;
-        box-shadow: 0 0 3px white, 0 0 7px white, 0 0 10px gold;
+        box-shadow: 0 0 1px white, 0 0 2px white, 0 0 5px gold;
     }
 
     header h1 {
@@ -115,6 +115,8 @@ header div {
         width: 1rem;
         margin-right: 0.5rem;
         border-radius: 0.5rem;
+        border: 2px goldenrod solid;
+        box-shadow: 0 0 2px white, 0 0 4px white, 0 0 6px gold;
     }
     
 }
